--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,12 @@
   <link rel="stylesheet" href="css/contact.css">
   <script type="text/javascript" src="../../lib/jquery-1.11.1.js"></script>
 	<script type="text/javascript" src="js/jquery.validate.min.js"></script>
-	<script type="text/javascript" src="js/val-form.js"></script>
+	<!--script type="text/javascript" src="js/val-form.js"></script-->
+    <!--script type="text/javascript" src="js/map.js"></script-->
+    <!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ1vprFx3ItGkhXh4UxGpV0-1-aMmKI_4&callback=myMap"></script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script-->
+
 </head>
 
     <body>
@@ -85,7 +90,8 @@ offerings and special events. You can also recieve coupons and Daily Delights!</
        </div>
        <div class="col-sm-6">
            <p><br><br></p>
-           <img class="img" src="img\GoogleMaps-MainSt-Urbana.JPG" height="300" width="300" >
+           <div id="googleMap" style="width:100%;height:400px;"></div>
+
            <h2>Contact Info:</h2>
            <p><strong><font size="3">Donut Delights<br>
            2112 main street<br>
@@ -104,6 +110,19 @@ offerings and special events. You can also recieve coupons and Daily Delights!</
 &copy  Ryan Domier 2017
 <img class="img" src="img\NEWLOGO - Copy.png" height="70" width="80" align="right">
 </p> 
+
+<script>
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(40.1145, -88.2171),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <!--script>
