--- a/contact.html
+++ b/contact.html
@@ -114,8 +114,8 @@ offerings and special events. You can also recieve coupons and Daily Delights!</
 <script>
 function myMap() {
 var mapProp= {
-    center:new google.maps.LatLng(40.1145, -88.2171),
-    zoom:5,
+    center:new google.maps.LatLng(40.1124448,-88.20840950000002),
+    zoom:10,
 };
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
