made social media links work for all pages in new tab

--- a/index.html
+++ b/index.html
@@ -169,11 +169,19 @@ src="https://www.youtube.com/embed/aWMjUQFEGd0">
 
  
 
-    <p align="center">  
+    <p align="center">
+<a href="http://www.facebook.com" target="_blank">  
 <img class="img" src="img\Asset 1-100.jpg" height="59" width="59" hspace="20" align="left" >
+</a>
+<a href="http://www.twitter.com" target="_blank">
 <img class="img" src="img\Asset 2-100.jpg" height="59" width="59" hspace="5" align="left">
+</a>
+<a href="http://www.youtube.com" target="_blank">
 <img class="img" src="img\Asset 3-100.jpg" height="59" width="59" hspace="5" align="left">
+</a>
+<a href="http://www.instagram.com" target="_blank">
 <img class="img" src="img\Asset 5-100.jpg" height="59" width="79" hspace="5" align="left" >
+</a>
 &copy  Ryan Domier 2017
 <img class="img" src="img\NEWLOGO - Copy.png" height="70" width="80" align="right">
 </p> 
