--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@ offerings and special events. You can also recieve coupons and Daily Delights!</
 <div class= "container-fluid dd-contact-page"> 
     <div class="row">
        <div class="col-sm-5 col-sm-offset-1">
-           <form id="signupForm" method="post" class="form-horizontal" action="">
+           <form id="signupForm" method="post" class="form-horizontal" action="join.html">
            <div class="form-group">
                <p><br><br></p>
                <label for="email">Subscribe to our newsletter for the latest on our seasonal 
@@ -102,15 +102,23 @@ offerings and special events. You can also recieve coupons and Daily Delights!</
    </div>
 </div>
 </div>
-<p align="center">  
+
+    <p align="center">
+<a href="http://www.facebook.com" target="_blank">  
 <img class="img" src="img\Asset 1-100.jpg" height="59" width="59" hspace="20" align="left" >
+</a>
+<a href="http://www.twitter.com" target="_blank">
 <img class="img" src="img\Asset 2-100.jpg" height="59" width="59" hspace="5" align="left">
+</a>
+<a href="http://www.youtube.com" target="_blank">
 <img class="img" src="img\Asset 3-100.jpg" height="59" width="59" hspace="5" align="left">
+</a>
+<a href="http://www.instagram.com" target="_blank">
 <img class="img" src="img\Asset 5-100.jpg" height="59" width="79" hspace="5" align="left" >
+</a>
 &copy  Ryan Domier 2017
 <img class="img" src="img\NEWLOGO - Copy.png" height="70" width="80" align="right">
 </p> 
-
 <script>
 function myMap() {
 var mapProp= {
