--- a/menu.html
+++ b/menu.html
@@ -122,16 +122,22 @@
    <img class="img" src="img\slanty-text.png" height="200" width="950" align="center">
 </div>
 
-<p><br><br></p>
-<p align="center">  
+    <p align="center">
+<a href="http://www.facebook.com" target="_blank">  
 <img class="img" src="img\Asset 1-100.jpg" height="59" width="59" hspace="20" align="left" >
+</a>
+<a href="http://www.twitter.com" target="_blank">
 <img class="img" src="img\Asset 2-100.jpg" height="59" width="59" hspace="5" align="left">
+</a>
+<a href="http://www.youtube.com" target="_blank">
 <img class="img" src="img\Asset 3-100.jpg" height="59" width="59" hspace="5" align="left">
+</a>
+<a href="http://www.instagram.com" target="_blank">
 <img class="img" src="img\Asset 5-100.jpg" height="59" width="79" hspace="5" align="left" >
+</a>
 &copy  Ryan Domier 2017
 <img class="img" src="img\NEWLOGO - Copy.png" height="70" width="80" align="right">
 </p> 
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <!--script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
