--- a/menu.html
+++ b/menu.html
@@ -138,20 +138,15 @@
 &copy  Ryan Domier 2017
 <img class="img" src="img\NEWLOGO - Copy.png" height="70" width="80" align="right">
 </p> 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!--script>
+        < Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-99133430-1','auto');ga('send','pageview');
         </script-->
-
-
-   
-
-
 
     </body>
 </html>
