fixed GA text, removed post function from form on contact

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,8 @@ offerings and special events. You can also recieve coupons and Daily Delights!</
 <div class= "container-fluid dd-contact-page"> 
     <div class="row">
        <div class="col-sm-5 col-sm-offset-1">
-           <form id="signupForm" method="post" class="form-horizontal" action="join.html">
+           <!--form id="signupForm" method="post" class="form-horizontal" action="join.html"-->
+                          <form id="signupForm" class="form-horizontal" action="join.html">
            <div class="form-group">
                <p><br><br></p>
                <label for="email">Subscribe to our newsletter for the latest on our seasonal 
@@ -132,7 +133,7 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATfeJWwswTqJvM6xd7G-Sb2B183rHL1wI&callback=myMap"></script>
 
 
-        < Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
